crates/pgls_pretty_print/tests/snapshots/multi/tests__sqljson_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/sqljson.sql
snapshot_kind: text
---
SELECT JSON(NULL);

SELECT JSON('{ "a" : 1 } ');

SELECT JSON('{ "a" : 1 } ' FORMAT JSON);

SELECT JSON('{ "a" : 1 } ' FORMAT JSON ENCODING UTF8);

SELECT JSON(CAST('{ "a" : 1 } ' AS BYTEA) FORMAT JSON ENCODING UTF8);

SELECT pg_typeof(JSON('{ "a" : 1 } '));

SELECT JSON(CAST('   1   ' AS JSON));

SELECT JSON(CAST('   1   ' AS JSONB));

SELECT JSON(CAST('   1   ' AS JSON) WITH UNIQUE KEYS);

SELECT JSON(123);

SELECT JSON('{"a": 1, "a": 2}');

SELECT JSON('{"a": 1, "a": 2}' WITH UNIQUE KEYS);

SELECT JSON('{"a": 1, "a": 2}');

SELECT JSON('123');

SELECT JSON('123' FORMAT JSON);

SELECT JSON(CAST('123' AS BYTEA) FORMAT JSON);

SELECT JSON(CAST('123' AS BYTEA) FORMAT JSON ENCODING UTF8);

SELECT JSON('123' WITH UNIQUE KEYS);

SELECT JSON('123');

SELECT JSON('123');

SELECT pg_typeof(JSON('123'));

SELECT JSON_SCALAR(NULL);

SELECT JSON_SCALAR(CAST(NULL AS INT));

SELECT JSON_SCALAR(123);

SELECT JSON_SCALAR(123.45);

SELECT JSON_SCALAR(CAST(123.45 AS NUMERIC));

SELECT JSON_SCALAR(TRUE);

SELECT JSON_SCALAR(FALSE);

SELECT JSON_SCALAR(' 123.45');

SELECT JSON_SCALAR(CAST('2020-06-07' AS DATE));

SELECT JSON_SCALAR(CAST('2020-06-07 01:02:03' AS TIMESTAMP));

SELECT JSON_SCALAR(CAST('{}' AS JSON));

SELECT JSON_SCALAR(CAST('{}' AS JSONB));

SELECT JSON_SCALAR(123);

SELECT JSON_SCALAR('123');

SELECT JSON_SERIALIZE(NULL);

SELECT JSON_SERIALIZE(JSON('{ "a" : 1 } '));

SELECT JSON_SERIALIZE('{ "a" : 1 } ');

SELECT JSON_SERIALIZE('1');

SELECT JSON_SERIALIZE('1' FORMAT JSON);

SELECT JSON_SERIALIZE('{ "a" : 1 } ' RETURNING BYTEA);

SELECT JSON_SERIALIZE('{ "a" : 1 } ' RETURNING VARCHAR);

SELECT pg_typeof(JSON_SERIALIZE(NULL));

SELECT JSON_SERIALIZE('{ "a" : 1 } ' RETURNING JSONB);

SELECT JSON_SERIALIZE('{}');

SELECT JSON_SERIALIZE('{}' RETURNING BYTEA);

SELECT JSON_OBJECT();

SELECT JSON_OBJECT(RETURNING JSON);

SELECT JSON_OBJECT(RETURNING JSON FORMAT JSON);

SELECT JSON_OBJECT(RETURNING JSONB);

SELECT JSON_OBJECT(RETURNING JSONB FORMAT JSON);

SELECT JSON_OBJECT(RETURNING TEXT);

SELECT JSON_OBJECT(RETURNING TEXT FORMAT JSON);

SELECT JSON_OBJECT(RETURNING TEXT FORMAT JSON ENCODING UTF8);

SELECT JSON_OBJECT(RETURNING BYTEA);

SELECT JSON_OBJECT(RETURNING BYTEA FORMAT JSON);

SELECT JSON_OBJECT(RETURNING BYTEA FORMAT JSON ENCODING UTF8);

SELECT JSON_OBJECT(RETURNING BYTEA FORMAT JSON ENCODING UTF16);

SELECT JSON_OBJECT(RETURNING BYTEA FORMAT JSON ENCODING UTF32);

SELECT JSON_OBJECT('foo' : CAST(NULL AS INT) FORMAT JSON);

SELECT JSON_OBJECT('foo' : CAST(NULL AS INT) FORMAT JSON ENCODING UTF8);

SELECT JSON_OBJECT('foo' : CAST(NULL AS JSON) FORMAT JSON);

SELECT JSON_OBJECT('foo' : CAST(NULL AS JSON) FORMAT JSON ENCODING UTF8);

SELECT JSON_OBJECT('foo' : CAST(NULL AS JSONB) FORMAT JSON);

SELECT JSON_OBJECT('foo' : CAST(NULL AS JSONB) FORMAT JSON ENCODING UTF8);

SELECT JSON_OBJECT(NULL : 1);

SELECT JSON_OBJECT('a' : 2 + 3);

SELECT JSON_OBJECT('a' : 2 + 3);

SELECT JSON_OBJECT('a' || 2 : 1);

SELECT JSON_OBJECT('a' || 2 : 1);

SELECT JSON_OBJECT('a' : CAST(2 AS TEXT));

SELECT JSON_OBJECT('a' : CAST(2 AS TEXT));

SELECT JSON_OBJECT(CAST(1 AS TEXT) : 2);

SELECT JSON_OBJECT(CAST(1 AS TEXT) : 2);

SELECT JSON_OBJECT(CAST('[1]' AS JSON) : 123);

SELECT JSON_OBJECT(ARRAY[1, 2, 3] : 'aaa');

SELECT
  JSON_OBJECT('a' : '123',
  1.23 : 123,
  'c' : CAST('[ 1,true,{ } ]' AS JSON),
  'd' : CAST('{ "x" : 123.45 }' AS JSONB));

SELECT
  JSON_OBJECT('a' : '123',
  1.23 : 123,
  'c' : CAST('[ 1,true,{ } ]' AS JSON),
  'd' : CAST('{ "x" : 123.45 }' AS JSONB) RETURNING JSONB);

SELECT JSON_OBJECT('a' : '123', 'b' : JSON_OBJECT('a' : 111, 'b' : 'aaa'));

SELECT
  JSON_OBJECT('a' : '123',
  'b' : JSON_OBJECT('a' : 111,
  'b' : 'aaa' RETURNING JSONB));

SELECT JSON_OBJECT('a' : JSON_OBJECT('b' : 1 RETURNING TEXT));

SELECT JSON_OBJECT('a' : JSON_OBJECT('b' : 1 RETURNING TEXT) FORMAT JSON);

SELECT JSON_OBJECT('a' : JSON_OBJECT('b' : 1 RETURNING BYTEA));

SELECT JSON_OBJECT('a' : JSON_OBJECT('b' : 1 RETURNING BYTEA) FORMAT JSON);

SELECT JSON_OBJECT('a' : '1', 'b' : NULL, 'c' : 2);

SELECT JSON_OBJECT('a' : '1', 'b' : NULL, 'c' : 2);

SELECT JSON_OBJECT('a' : '1', 'b' : NULL, 'c' : 2 ABSENT ON NULL);

SELECT
  JSON_OBJECT(1 : 1,
  '2' : NULL,
  '3' : 1,
  repeat('x', 1000) : 1,
  2 : repeat('a', 100) WITH UNIQUE KEYS);

SELECT JSON_OBJECT(1 : 1, '1' : NULL WITH UNIQUE KEYS);

SELECT JSON_OBJECT(1 : 1, '1' : NULL ABSENT ON NULL WITH UNIQUE KEYS);

SELECT JSON_OBJECT(1 : 1, '1' : NULL WITH UNIQUE KEYS RETURNING JSONB);

SELECT
  JSON_OBJECT(1 : 1,
  '1' : NULL ABSENT ON NULL WITH UNIQUE KEYS RETURNING JSONB);

SELECT JSON_OBJECT(1 : 1, '2' : NULL, '1' : 1 WITH UNIQUE KEYS);

SELECT JSON_OBJECT(1 : 1, '2' : NULL, '1' : 1 ABSENT ON NULL WITH UNIQUE KEYS);

SELECT JSON_OBJECT(1 : 1, '2' : NULL, '1' : 1 ABSENT ON NULL);

SELECT
  JSON_OBJECT(1 : 1,
  '2' : NULL,
  '1' : 1 ABSENT ON NULL WITH UNIQUE KEYS RETURNING JSONB);

SELECT JSON_OBJECT(1 : 1, '2' : NULL, '1' : 1 ABSENT ON NULL RETURNING JSONB);

SELECT
  JSON_OBJECT(1 : 1,
  '2' : NULL,
  '3' : 1,
  4 : NULL,
  '5' : 'a' ABSENT ON NULL WITH UNIQUE KEYS RETURNING JSONB);

CREATE TYPE mood AS ENUM ('happy', 'sad', 'neutral');

CREATE FUNCTION mood_to_json(mood)
RETURNS JSON
AS '
  SELECT to_json($1::text);
'
LANGUAGE "sql"
IMMUTABLE;

CREATE CAST (mood AS JSON) WITH FUNCTION mood_to_json(mood) AS IMPLICIT;

SELECT JSON_OBJECT(CAST('happy' AS mood) : CAST('123' AS JSONB));

DROP CAST (mood AS JSON);

DROP FUNCTION mood_to_json;

DROP TYPE mood;

SELECT JSON_ARRAY();

SELECT JSON_ARRAY(RETURNING JSON);

SELECT JSON_ARRAY(RETURNING JSON FORMAT JSON);

SELECT JSON_ARRAY(RETURNING JSONB);

SELECT JSON_ARRAY(RETURNING JSONB FORMAT JSON);

SELECT JSON_ARRAY(RETURNING TEXT);

SELECT JSON_ARRAY(RETURNING TEXT FORMAT JSON);

SELECT JSON_ARRAY(RETURNING TEXT FORMAT JSON ENCODING UTF8);

SELECT JSON_ARRAY(RETURNING BYTEA);

SELECT JSON_ARRAY(RETURNING BYTEA FORMAT JSON);

SELECT JSON_ARRAY(RETURNING BYTEA FORMAT JSON ENCODING UTF8);

SELECT JSON_ARRAY(RETURNING BYTEA FORMAT JSON ENCODING UTF16);

SELECT JSON_ARRAY(RETURNING BYTEA FORMAT JSON ENCODING UTF32);

SELECT
  JSON_ARRAY('aaa',
  111,
  TRUE,
  ARRAY[1, 2, 3],
  NULL,
  CAST('{"a": [1]}' AS JSON),
  CAST('["a",3]' AS JSONB)
  ABSENT ON NULL);

SELECT JSON_ARRAY('a', NULL, 'b' NULL ON NULL);

SELECT JSON_ARRAY('a', NULL, 'b' ABSENT ON NULL);

SELECT JSON_ARRAY(NULL, NULL, 'b' ABSENT ON NULL);

SELECT JSON_ARRAY('a', NULL, 'b' NULL ON NULL RETURNING JSONB);

SELECT JSON_ARRAY('a', NULL, 'b' ABSENT ON NULL RETURNING JSONB);

SELECT JSON_ARRAY(NULL, NULL, 'b' ABSENT ON NULL RETURNING JSONB);

SELECT
  JSON_ARRAY(JSON_ARRAY('{ "a" : 123 }'
  ABSENT ON NULL RETURNING TEXT)
  ABSENT ON NULL);

SELECT
  JSON_ARRAY(JSON_ARRAY('{ "a" : 123 }' FORMAT JSON
  ABSENT ON NULL RETURNING TEXT)
  ABSENT ON NULL);

SELECT
  JSON_ARRAY(JSON_ARRAY('{ "a" : 123 }' FORMAT JSON
  ABSENT ON NULL RETURNING TEXT) FORMAT JSON
  ABSENT ON NULL);

SELECT JSON_ARRAY(SELECT i FROM (VALUES (1), (2), (NULL), (4)) AS foo (i));

SELECT
  JSON_ARRAY(SELECT
    i
  FROM
    (
      VALUES
        (CAST(NULL AS INT[])),
        ('{1,2}'),
        (NULL),
        (NULL),
        ('{3,4}'),
        (NULL)
    )
    AS foo (i));

SELECT
  JSON_ARRAY(SELECT
    i
  FROM
    (
      VALUES
        (CAST(NULL AS INT[])),
        ('{1,2}'),
        (NULL),
        (NULL),
        ('{3,4}'),
        (NULL)
    )
    AS foo (i) RETURNING JSONB);

SELECT
  JSON_ARRAY(SELECT
    i
  FROM
    (
      VALUES (3), (1), (NULL), (2)
    )
    AS foo (i)
  ORDER BY i);

SELECT JSON_ARRAY(WITH x AS (SELECT 1) VALUES (TRUE));

SELECT JSON_ARRAY(SELECT FROM (VALUES (1)) AS foo (i));

SELECT JSON_ARRAY(SELECT i, i FROM (VALUES (1)) AS foo (i));

SELECT JSON_ARRAY(SELECT * FROM (VALUES (1, 2)) AS foo (i, j));

SELECT
  JSON_ARRAYAGG(i ABSENT ON NULL) IS NULL,
  JSON_ARRAYAGG(i
  ABSENT ON NULL
  RETURNING JSONB) IS NULL
FROM
  generate_series(1, 0) AS i;

SELECT
  JSON_ARRAYAGG(i ABSENT ON NULL),
  JSON_ARRAYAGG(i
  ABSENT ON NULL
  RETURNING JSONB)
FROM
  generate_series(1, 5) AS i;

SELECT
  JSON_ARRAYAGG(i
  ORDER BY i DESC
  ABSENT ON NULL)
FROM
  generate_series(1, 5) AS i;

SELECT
  JSON_ARRAYAGG(CAST(CAST(i AS TEXT) AS JSON)
  ABSENT ON NULL)
FROM
  generate_series(1, 5) AS i;

SELECT
  JSON_ARRAYAGG(JSON_ARRAY(i,
  i + 1
  ABSENT ON NULL RETURNING TEXT) FORMAT JSON
  ABSENT ON NULL)
FROM
  generate_series(1, 5) AS i;

SELECT
  JSON_ARRAYAGG(NULL ABSENT ON NULL),
  JSON_ARRAYAGG(NULL
  ABSENT ON NULL
  RETURNING JSONB)
FROM
  generate_series(1, 5);

SELECT
  JSON_ARRAYAGG(NULL NULL ON NULL),
  JSON_ARRAYAGG(NULL
  NULL ON NULL
  RETURNING JSONB)
FROM
  generate_series(1, 5);

SELECT
  JSON_ARRAYAGG(bar ABSENT ON NULL)
  AS no_options,
  JSON_ARRAYAGG(bar
  ABSENT ON NULL
  RETURNING JSONB)
  AS returning_jsonb,
  JSON_ARRAYAGG(bar ABSENT ON NULL)
  AS absent_on_null,
  JSON_ARRAYAGG(bar
  ABSENT ON NULL
  RETURNING JSONB)
  AS absentonnull_returning_jsonb,
  JSON_ARRAYAGG(bar NULL ON NULL)
  AS null_on_null,
  JSON_ARRAYAGG(bar
  NULL ON NULL
  RETURNING JSONB)
  AS nullonnull_returning_jsonb,
  JSON_ARRAYAGG(foo ABSENT ON NULL)
  AS row_no_options,
  JSON_ARRAYAGG(foo
  ABSENT ON NULL
  RETURNING JSONB)
  AS row_returning_jsonb,
  JSON_ARRAYAGG(foo
  ORDER BY bar
  ABSENT ON NULL)
  FILTER (WHERE
    bar > 2)
  AS row_filtered_agg,
  JSON_ARRAYAGG(foo
  ORDER BY bar
  ABSENT ON NULL
  RETURNING JSONB)
  FILTER (WHERE
    bar > 2)
  AS row_filtered_agg_returning_jsonb
FROM
  (
    VALUES
      (NULL),
      (3),
      (1),
      (NULL),
      (NULL),
      (5),
      (2),
      (4),
      (NULL)
  )
  AS foo (bar);

SELECT
  bar,
  JSON_ARRAYAGG(bar
  ABSENT ON NULL)
  FILTER (WHERE
    bar > 2)
  OVER (
    PARTITION BY foo.bar % 2
  )
FROM
  (
    VALUES
      (NULL),
      (3),
      (1),
      (NULL),
      (NULL),
      (5),
      (2),
      (4),
      (NULL),
      (5),
      (4)
  )
  AS foo (bar);

SELECT
  JSON_OBJECTAGG('key' : 1 NULL ON NULL) IS NULL,
  JSON_OBJECTAGG('key' : 1
  NULL ON NULL
  RETURNING JSONB) IS NULL
WHERE
  FALSE;

SELECT JSON_OBJECTAGG(NULL : 1 NULL ON NULL);

SELECT JSON_OBJECTAGG(NULL : 1 NULL ON NULL  RETURNING JSONB);

SELECT
  JSON_OBJECTAGG(i : i NULL ON NULL),
  JSON_OBJECTAGG(i : i
  NULL ON NULL
  RETURNING JSONB)
FROM
  generate_series(1, 5) AS i;

SELECT
  JSON_OBJECTAGG(k : v NULL ON NULL),
  JSON_OBJECTAGG(k : v NULL ON NULL),
  JSON_OBJECTAGG(k : v ABSENT ON NULL),
  JSON_OBJECTAGG(k : v
  NULL ON NULL
  RETURNING JSONB),
  JSON_OBJECTAGG(k : v
  NULL ON NULL
  RETURNING JSONB),
  JSON_OBJECTAGG(k : v
  ABSENT ON NULL
  RETURNING JSONB)
FROM
  (
    VALUES
      (1, 1),
      (1, NULL),
      (2, NULL),
      (3, 3)
  )
  AS foo (k, v);

SELECT
  JSON_OBJECTAGG(k : v
  NULL ON NULL
  WITH UNIQUE KEYS)
FROM
  (
    VALUES (1, 1), (1, NULL), (2, 2)
  )
  AS foo (k, v);

SELECT
  JSON_OBJECTAGG(k : v
  ABSENT ON NULL
  WITH UNIQUE KEYS)
FROM
  (
    VALUES (1, 1), (1, NULL), (2, 2)
  )
  AS foo (k, v);

SELECT
  JSON_OBJECTAGG(k : v
  ABSENT ON NULL
  WITH UNIQUE KEYS)
FROM
  (
    VALUES
      (1, 1),
      (0, NULL),
      (3, NULL),
      (2, 2),
      (4, NULL)
  )
  AS foo (k, v);

SELECT
  JSON_OBJECTAGG(k : v
  NULL ON NULL
  WITH UNIQUE KEYS
  RETURNING JSONB)
FROM
  (
    VALUES (1, 1), (1, NULL), (2, 2)
  )
  AS foo (k, v);

SELECT
  JSON_OBJECTAGG(k : v
  ABSENT ON NULL
  WITH UNIQUE KEYS
  RETURNING JSONB)
FROM
  (
    VALUES (1, 1), (1, NULL), (2, 2)
  )
  AS foo (k, v);

SELECT
  JSON_OBJECTAGG(k : v
  ABSENT ON NULL
  WITH UNIQUE KEYS
  RETURNING JSONB)
FROM
  (
    VALUES
      (1, 1),
      (0, NULL),
      (4, NULL),
      (5, NULL),
      (6, NULL),
      (2, 2)
  )
  AS foo (k, v);

SELECT
  JSON_OBJECTAGG(mod(i, 100) : CAST(i AS TEXT) FORMAT JSON
  NULL ON NULL
  WITH UNIQUE KEYS)
FROM
  generate_series(0, 199) AS i;

SELECT JSON_OBJECT('foo' : '1' FORMAT JSON, 'bar' : 'baz' RETURNING JSON);

CREATE VIEW json_object_view
AS SELECT
  JSON_OBJECT('foo' : '1' FORMAT JSON,
  'bar' : 'baz' RETURNING JSON);

DROP VIEW "json_object_view";

SELECT
  to_json(a) AS a,
  JSON_OBJECTAGG(k : v
  NULL ON NULL
  WITH UNIQUE KEYS)
  OVER (
    ORDER BY k
  )
FROM
  (VALUES (1, 1), (2, 2)) AS a (k, v);

SELECT
  to_json(a) AS a,
  JSON_OBJECTAGG(k : v
  NULL ON NULL
  WITH UNIQUE KEYS)
  OVER (
    ORDER BY k
  )
FROM
  (
    VALUES (1, 1), (1, 2), (2, 2)
  )
  AS a (k, v);

SELECT
  to_json(a) AS a,
  JSON_OBJECTAGG(k : v
  ABSENT ON NULL
  WITH UNIQUE KEYS)
  OVER (
    ORDER BY k
  )
FROM
  (
    VALUES (1, 1), (1, NULL), (2, 2)
  )
  AS a (k, v);

SELECT
  to_json(a) AS a,
  JSON_OBJECTAGG(k : v
  ABSENT ON NULL)
  OVER (
    ORDER BY k
  )
FROM
  (
    VALUES (1, 1), (1, NULL), (2, 2)
  )
  AS a (k, v);

SELECT
  to_json(a) AS a,
  JSON_OBJECTAGG(k : v
  ABSENT ON NULL)
  OVER (
    ORDER BY k
    RANGE BETWEEN
    UNBOUNDED PRECEDING
    AND
    UNBOUNDED FOLLOWING
  )
FROM
  (
    VALUES (1, 1), (1, NULL), (2, 2)
  )
  AS a (k, v);

SELECT JSON_ARRAY('1' FORMAT JSON, 2 ABSENT ON NULL RETURNING JSON);

CREATE VIEW json_array_view
AS SELECT
  JSON_ARRAY('1' FORMAT JSON,
  2
  ABSENT ON NULL RETURNING JSON);

DROP VIEW "json_array_view";

SELECT
  JSON_OBJECTAGG(i : CAST('111' || i AS BYTEA) FORMAT JSON
  NULL ON NULL
  WITH UNIQUE KEYS
  RETURNING TEXT)
  FILTER (WHERE
    i > 3)
FROM
  generate_series(1, 5) AS i;

SELECT
  JSON_OBJECTAGG(i : CAST('111' || i AS BYTEA) FORMAT JSON
  NULL ON NULL
  WITH UNIQUE KEYS
  RETURNING TEXT)
  OVER (
    PARTITION BY i % 2
  )
FROM
  generate_series(1, 5) AS i;

CREATE VIEW json_objectagg_view
AS SELECT
  JSON_OBJECTAGG(i : CAST('111' || i AS BYTEA) FORMAT JSON
  NULL ON NULL
  WITH UNIQUE KEYS
  RETURNING TEXT)
  FILTER (WHERE
    i > 3)
FROM
  generate_series(1, 5) AS i;

DROP VIEW "json_objectagg_view";

SELECT
  JSON_ARRAYAGG(CAST('111' || i AS BYTEA) FORMAT JSON
  NULL ON NULL
  RETURNING TEXT)
  FILTER (WHERE
    i > 3)
FROM
  generate_series(1, 5) AS i;

SELECT
  JSON_ARRAYAGG(CAST('111' || i AS BYTEA) FORMAT JSON
  NULL ON NULL
  RETURNING TEXT)
  OVER (
    PARTITION BY i % 2
  )
FROM
  generate_series(1, 5) AS i;

CREATE VIEW json_arrayagg_view
AS SELECT
  JSON_ARRAYAGG(CAST('111' || i AS BYTEA) FORMAT JSON
  NULL ON NULL
  RETURNING TEXT)
  FILTER (WHERE
    i > 3)
FROM
  generate_series(1, 5) AS i;

DROP VIEW "json_arrayagg_view";

SELECT
  JSON_ARRAY(SELECT
    i
  FROM
    (
      VALUES (1), (2), (NULL), (4)
    )
    AS foo (i) RETURNING JSONB);

CREATE VIEW json_array_subquery_view
AS SELECT
  JSON_ARRAY(SELECT
    i
  FROM
    (
      VALUES (1), (2), (NULL), (4)
    )
    AS foo (i) RETURNING JSONB);

DROP VIEW "json_array_subquery_view";

SELECT NULL IS JSON;

SELECT NOT NULL IS JSON;

SELECT CAST(NULL AS JSON) IS JSON;

SELECT CAST(NULL AS JSONB) IS JSON;

SELECT CAST(NULL AS TEXT) IS JSON;

SELECT CAST(NULL AS BYTEA) IS JSON;

SELECT CAST(NULL AS INT) IS JSON;

SELECT '' IS JSON;

SELECT CAST('\x00' AS BYTEA) IS JSON;

CREATE TABLE test_is_json (js TEXT);

INSERT INTO test_is_json
VALUES
  (NULL),
  (''),
  ('123'),
  ('"aaa "'),
  ('true'),
  ('null'),
  ('[]'),
  ('[1, "2", {}]'),
  ('{}'),
  ('{ "a": 1, "b": null }'),
  ('{ "a": 1, "a": null }'),
  (
    '{ "a": 1, "b": [{ "a": 1 }, { "a": 2 }] }'
  ),
  (
    '{ "a": 1, "b": [{ "a": 1, "b": 0, "a": 2 }] }'
  ),
  ('aaa'),
  ('{a:1}'),
  ('["a",]');

SELECT
  js,
  js IS JSON AS "IS JSON",
  NOT js IS JSON AS "IS NOT JSON",
  js IS JSON AS "IS VALUE",
  js IS JSON OBJECT AS "IS OBJECT",
  js IS JSON ARRAY AS "IS ARRAY",
  js IS JSON SCALAR AS "IS SCALAR",
  js IS JSON AS "WITHOUT UNIQUE",
  js IS JSON;
